--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "monkeywit",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.4.7",
+    "express": "^4.18.2",
+    "mysql2": "^3.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
