--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "node",
     "js"
   ],
-  "author": "monkeywit",
+  "author": "walner",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
+    "joi": "^17.13.3",
     "mysql2": "^3.12.0"
   },
   "devDependencies": {
